--- a/web/css/site.css
+++ b/web/css/site.css
@@ -310,6 +310,12 @@ header {
     margin: 0;
 }
 
+.productPrice{
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+}
+
 .productName {
     margin-bottom: 10px;
 }
@@ -1393,6 +1399,8 @@ input[type="text"]::placeholder, #comment::placeholder, input[type="email"]::pla
     }
 
    .service-card {
+    display: flex;
+    flex-direction: column;
     margin-top: 15px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 1);
